Updated footer element to be 100% and overflow hidden to stop horizontal scrolling on mobile viewports.

--- a/sass/global.scss
+++ b/sass/global.scss
@@ -535,6 +535,8 @@ nav {
 
 footer {
 	float:left;
+	width: 100%;
+	overflow: hidden;
 	}
 
 .tweet {
